# xhpi_detector

./: README.md  pyproject.toml
src/xhpi/: config.py  core.py  geometry.py
src/xhpi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
